--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍨</text></svg>">
+    <meta property="og:image" content="https://pablog-7.github.io/projeto-max-sorveteria/capa-max.jpeg">
 </head>
 <body>
 
@@ -644,7 +645,6 @@
             
             <div class="footer-bottom">
                 <p>© 2025 Maxx Sorvetes Ibertioga. Todos os direitos reservados.</p>
-                <p>Endereço: Rua Principal, 123 - Centro, Ibertioga - MG</p>
             </div>
         </div>
     </footer>
