--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Básico -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maxx Sorvetes Ibertioga</title>
+
+    <title>Maxx Sorvetes Bertioga | Sorveteria em Ibertioga - MG</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Maxx Sorvetes Bertioga em Ibertioga - MG. Sorvetes, açaí, picolés e chuchup com delivery rápido. Peça agora pelo WhatsApp!">
+    <meta name="keywords" content="sorveteria em ibertioga, sorvete ibertioga, açaí ibertioga, picolé ibertioga, maxx sorvetes, delivery sorvete">
+    <meta name="author" content="Maxx Sorvetes Bertioga">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph (WhatsApp / Facebook / Instagram) -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Maxx Sorvetes Bertioga 🍨 | Sorveteria em Ibertioga - MG">
+    <meta property="og:description" content="Sorvetes, açaí e picolés com delivery rápido em Ibertioga. Peça agora pelo WhatsApp!">
+    <meta property="og:url" content="https://pablog-7.github.io/projeto-max-sorveteria/">
+    <meta property="og:image" content="https://pablog-7.github.io/projeto-max-sorveteria/capa-max.jpeg">
+    <meta property="og:locale" content="pt_BR">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍨</text></svg>">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍨</text></svg>">
-    <meta property="og:image" content="https://pablog-7.github.io/projeto-max-sorveteria/capa-max.jpeg">
 </head>
 <body>
 
