--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                     <div class="badge-line"></div>
                                     <div class="badge-content">
                                         <span class="badge-name">MAX</span>
-                                        <span class="badge-role">Fundador & Sorveteiro</span>
+                                        <span class="badge-role">Proprietário</span>
                                     </div>
                                 </div>
                             </div>
