--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
                 </div>
             </div>
             
+             <div class="info-card">
             <div class="establishment-gallery">
                 <h3 class="gallery-title">Nossa Sorveteria</h3>
                 <p class="gallery-subtitle">Veja como é nosso espaço</p>
@@ -725,15 +726,6 @@
                                 loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
-                        </div>
-                        
-                        <div class="contact-actions" style="margin-top: 20px;">
-                            <a href="https://wa.me/553284442475?text=Oi!%20Vim%20pelo%20site%20da%20Max%20Sorvetes%20Ibertioga%20e%20gostaria%20de%20fazer%20um%20pedido%20%F0%9F%8D%B8" 
-                               class="btn-whatsapp-large" 
-                               target="_blank">
-                                <i class="fab fa-whatsapp"></i>
-                                Pedir pelo WhatsApp
-                            </a>
                         </div>
                     </div>
                 </div>
