--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
             <div class="establishment-gallery">
                 <div class="gallery-grid">
                     <!-- Foto 1 -->
-                    <a href="img/galeria1-max.jpeg" class="gallery-item" data-lightbox="estabelecimento" data-title="Max Sorvetes Ibertioga - Fachada">
+                    <a href="img/galeria1-max.jpeg" class="gallery-item" data-lightbox="estabelecimento" data-title="Max Sorvetes Ibertioga - Freezer de Armazenamento">
                         <div class="gallery-img">
                             <img src="img/galeria1-max.jpeg" alt="Fachada da Max Sorvetes Ibertioga" loading="lazy">
                             <div class="gallery-overlay">
@@ -693,7 +693,7 @@
                     </a>
                     
                     <!-- Foto 2 -->
-                    <a href="img/galeria2-max.jpeg" class="gallery-item" data-lightbox="estabelecimento" data-title="Max Sorvetes Ibertioga - Interior">
+                    <a href="img/galeria2-max.jpeg" class="gallery-item" data-lightbox="estabelecimento" data-title="Max Sorvetes Ibertioga - Interno do Estabelecimento">
                         <div class="gallery-img">
                             <img src="img/galeria2-max.jpeg" alt="Interior da Max Sorvetes Ibertioga" loading="lazy">
                             <div class="gallery-overlay">
